# dl-summarization

./: .gitignore  README.md  app.py  bad-example.txt  bart-old.py  bart.py  changes.md  convert-bart-to-longformer.py  convert-longformer.py  convert-pegasus-to-longformer.py  data.json  data.py  evaluate.py  example-good.txt  examples.md  generate.py  get-dataset.sh  good-example-2.txt  good-example-tldrlegal.txt  good-example2.txt  good-example3.txt  good-example4-tldrlegal.txt  good-examples.txt  good-exampletldr2.txt  input.txt  model.py  prophet.py  pyproject.toml  readData.py  requirements.txt  scratch.py  scratch2.py  t5.py  test.py  tldr-legal-dataset.py  train.py  train.sh  util.py
.devcontainer/: devcontainer.json
converted-models/: .gitignore
datasets/: get-dataset.sh
datasets/bigPatentData/: .gitignore
datasets/legal-case-briefs/: .gitignore
datasets/tldr-legal/: tldr-legal.ndjson
models/: bart.py  base.py  blenderbot.py  longformer.py  longformer_pegasus.py  longformer_t5.py  pegasus.py  prophetnet.py  t5.py
pretrained/: get-best.sh
scripts/: convert-pegasus-to-longformer.py
summarization/: data.py  lsa.py  util.py
summarization/data/: tldr_legal.py
summarization/models/: bart.py  base.py  blenderbot.py  longformer_pegasus.py  pegasus.py  prophetnet.py  t5.py
tldr-legal/: tldr-legal-dataset.py
