[tool.poetry]
name = "summarization-remote"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gdown = "^3.12.2"
pandas = "^1.1.4"
pytorch-lightning = "^1.0.7"
transformers = "^3.5.1"
requests = "^2.25.0"
rouge-score = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
